New in v0.11.2 (2003/02/07)
---------------------------

Fixed seg fault bug reported by a couple sparc/openbsd users.  Thanks
to Dave Steinberg for giving me an account on his system for testing.

Re-enabled --windows-mode and filename quoting.


New in v0.11.1 (2002/12/31)
---------------------------

**Warning** Various features have been removed from this version, so
this is not a safe upgrade.  Also this version has less error
checking, and, if it crashes, this version may be more prone to leave
the destination directory in an inconsistent state.  I plan to look at
these issues in the next version.  Also, this version is quite
different from previous ones, so you cannot run version 0.11.1 on one
end of a connection and any previous version on the other side.

The following features have been removed:

	--mirror-only option:  If you just want to mirror something, use
	rsync.  (Or you could use rdiff-backup and then just delete the
	rdiff-backup-data directory, and then update the root mtime.)

	--change-source-perms option:  This feature was pretty complicated
	to implement, and if something happened to rdiff-backup during a
	transfer, the old permissions could not be restored.

	All "resume" related functionality, like --checkpoint-interval:
	This was complicated to implement, and didn't seem to work all
	that well.

	Directory statistics file:  Although the session statistics file is
	still generated, the directory statistics file no longer is,
	because the new code structure makes it less inconvenient.

	The various --exclude and --include options no longer work when
	restoring.  This may be added later if there is demand.

	--windows-mode and filename quoting doesn't work.  There have been
	several requests for this in the past, so it will probably be
	re-added in the next version.

Extensive refactoring.  A lot of rdiff-backup's code was structured as
if it were still in one file, so it didn't make enough use of Python's
module system.
